# web-server

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README_en.md  Server.hpp  ServerBase.cpp  ServerBase.hpp  ServerHttp.cpp  ServerHttp.hpp  ServerHttps.hpp  WebConfig.xml  handler.cpp  handler.hpp  main.cpp  server.crt  web-server.sln  web_server
CacheSystem/: BasicCacheManager.cpp  BasicCacheManager.h  CacheManager.cpp  CacheManager.h  DiskReader.cpp  DiskReader.h  IOSystem.cpp  IOSystem.h  RedisCacheManager.cpp  RedisCacheManager.h
Init/: Initializer.cpp  Initializer.h
Logger/: Logger.cpp  Logger.h
cache/: CacheManager.cpp  CacheManager.h
cpp_redis/: cpp_redis  future_client.hpp  redis_client.hpp  redis_subscriber.hpp  reply.hpp
cpp_redis/builders/: builder_iface.hpp  reply_builder.hpp
cpp_redis/network/: redis_connection.hpp
init/: Initializer.cpp  Initializer.h
web-server/: Server.cpp  Server.hpp  ServerBase.cpp  ServerBase.hpp  main.cpp  web-server.vcxproj  web-server.vcxproj.filters
www/: .index.html.un~  index.html
